next bus - directions to closest bus stop and route stops markers visibility

--- a/src/styles/views/body/components/content/_Content.scss
+++ b/src/styles/views/body/components/content/_Content.scss
@@ -11,7 +11,10 @@
 }
 
 @media only screen and (max-width: 950px) {
-  .app-content .section-title {
-    margin: 0;
+  .app-content {
+    min-height: auto;
+    .section-title {
+      margin: 0;
+    }
   }
 }
